TypeReferenceVisitor: also create detections for methods overriding a method declared in the type